--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@sailshq/connect-redis": "^3.2.1",
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
+    "ajv": "^6.5.0",
     "async": "2.0.1",
-    "bcrypt-nodejs": "0.0.3",
+    "bcrypt": "^2.0.1",
     "grunt": "1.0.1",
+    "jsonwebtoken": "^8.2.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "sails": "^1.0.2",
